# cli_guadalupe_data

./: CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: develop.yml
cli_for_tools/: __init__.py  example_hello.py  paco_cli.py
tests/: test_paco_cli.py  test_transformations.py
