[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "Ciencia de Datos • GECI"
author-email = "ciencia.datos@islas.org.mx"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"
home-page = "https://github.com/IslasGECI/cli_guadalupe_data"
module = "cli_for_tools"
requires = ["typer", "typer-cli"]
requires-python=">=3.9"

[tool.flit.scripts]
crea_tabla_pvalor = "cli_for_tools.example_hello:main"